Revert "slight change to pom.xml"
This reverts commit eec30fefc7f7f3690ecf60c91824d7383ba268b8

--- a/src/main/webapp/i18n/en/song.json
+++ b/src/main/webapp/i18n/en/song.json
@@ -17,12 +17,10 @@
       "detail": {
         "title": "Song"
       },
-      "id": "ID",
-      "spotifySongId": "Spotify Song Id",
-      "songName": "Song Name",
-      "spotifyArtistId": "Spotify Artist Id",
-      "artistName": "Artist Name",
-      "user": "User"
+      "id": "Id",
+      "artist": "Artist",
+      "title": "Title",
+      "mainPage": "Main Page"
     }
   }
 }
