--- a/src/main/webapp/i18n/en/song.json
+++ b/src/main/webapp/i18n/en/song.json
@@ -17,10 +17,12 @@
       "detail": {
         "title": "Song"
       },
-      "id": "Id",
-      "artist": "Artist",
-      "title": "Title",
-      "mainPage": "Main Page"
+      "id": "ID",
+      "spotifySongId": "Spotify Song Id",
+      "songName": "Song Name",
+      "spotifyArtistId": "Spotify Artist Id",
+      "artistName": "Artist Name",
+      "user": "User"
     }
   }
 }
